Resolves: tdf#103684 calculate status bar functions across sheets

Also trigger recalculation when additional sheets are selected or deselected.

Change-Id: I259396a3e30c5653ac252b7bb2eb6a0a9405d6cc
(cherry picked from commit 8d777f85eaff6af8896942590316b7cd9f2c3e75)
Reviewed-on: https://gerrit.libreoffice.org/30546
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>
(cherry picked from commit 0a296eee23380275ec7bad1dff8d81b75d98429f)